[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
screenshots = "0.7.2"
global-hotkey = "0.2.3"
keyboard-types="0.6.2"
image = "0.24.7"
native-dialog = "0.6.4"
arboard = "3.2.0"
geo = "0.26.0"
emath = "0.22.0"


[profile.dev]
opt-level=2

[profile.release]
opt-level=3


